--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "baseUrl": "src",
     "paths": {
       "@/*": ["*"]
-    }
+    },
+    "types": ["node", "jest", "@testing-library/jest-dom"],
   },
   "include": ["src"],
   "exclude": ["node_modules", "**/*.spec.ts"]
